# gcp-profiles

./: pyproject.toml
.github/workflows/: publish.yaml
src/gcp_auth/: __init__.py  main.py  utils.py  vault.py
src/gcp_profiles/: main.py
