[project]
name = "gcp-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manel Caireta", email = "m.caireta@altostratus.es" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
gcp-auth = "gcp_auth:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
