[project]
name = "gcp-profiles"
version = "0.1.1"
description = "A simple gcloud auth and adc manager."
readme = "README.md"
authors = [{ name = "Manel Caireta", email = "manelkireta@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["rich>=14.2.0", "typer>=0.20.0"]
license = { file = "LICENSE" }

[project.scripts]
gcp-profiles = "gcp_profiles:main"

[project.urls]
Respository = "https://github.com/manelcaireta/gcp-profiles.git"
Issues = "https://github.com/manelcaireta/gcp-profiles/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
